$Id: $

2008-05-26
	* Updated module building to use autotools
	* Fix regression with console build
	* Fix for expression if (foo.x)
	* UDS copy operations now always as by reference
	* Can now refer to UDS field within parenthesis
	* Updated FLTK online help

2008-05-24
	* Updated SDL forms to work with guichan 0.8.1
	* Fixed problem with FLTK HelpWidget displaying large pages

2008-05-15
	* Update FLTK forms implementation to be like the SDL implementation
	* FLTK now correctly implements DELAY
	* Updated help.bas help plugin to include an index

2008-05-07
	* FLTK: allow applications to set the window geometry using:
	option predef grmode WxH

2008-04-26
	* Source code release for version 0.10.0

2008-03-31
	* Various fixes for FLTK build
	* Implemented outside file change check in FLTK build
	* Implemented file drop support in FLTK build
	* Not being able to save an sbx file is no longer a fatal error
	* runtime .bas files can now be read-only files.
	* break command updates global last error string

2008-03-15
	* re-migrated code from cvs - this time with full history

2007-12-31
	* Fixed a problem in the SDL version with pressing ctrl+c
	  while the "press any key to close" message was being displayed

2007-12-02      version 0.9.9.0
	* moved code to subversion
	* see src/fltk/README.TXT for updated project indent settings

2007-11-03	version 0.9.8.3
	* refactored console_main
	* added the ability to include a path component in a unit name, eg:
	  import other.something.foo
	  ? foo.my_var

	  Then in the foo.bas file:

	  Unit other.something.Foo
	  export my_var

	  The unit file should be saved in $UNITPATH/other/something.
	  If not defined, $UNITPATH is inferred as the host program
	  file directory.

2007-10-10
	* A runtime error is now created in lieu of crashing when you
	  pass a value less than 0 to the LEFT and RIGHT string commands.
	* The runtime error for LEFT,RIGHT,REPLACE,MID,INSTR,RINSTR now
	  includes the invalid index in the message
